<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">Instead</string>
    <string name="run">Start game</string>
    <string name="gmlist">Games repository</string>
    <string name="exit">Exit</string>
    <string name="writefile">Save file</string>
    <string name="writefileerorr">File saving error</string>
    <string name="finish">Download finished</string>
    <string name="dataerror">Data-file downloading error</string>
    <string name="downdata">Download file</string>
    <string name="conerror">Connection error</string>
    <string name="connect">Connecting</string>
    <string name="ready">Ready</string>
    <string name="init">Initialising</string>
    <string name="update">Update game list</string>
    <string name="menudel">Remove game</string>
    <string name="menudown">Download game</string>
    <string name="menustart">Start game</string>
    <string name="menuupd">Update game</string>
    <string name="redwn">Reset and \n reinstall the files on the SD</string>
    <string name="installed">Installed</string>
    <string name="filtr">Filter</string>
    <string name="all">All</string>
    <string name="isupd">Updates</string>
    <string name="isnew">New</string>
    <string name="games">Games</string>
    <string name="delrc">Settings deleted!</string>
    <string name="gdwncompl">Game downloaded</string>
    <string name="delgame">Game removed</string>
    <string name="wait">Please wait...</string>
    <string name="basic">Official</string>
    <string name="repo">List of games</string>
    <string name="alter">Not official</string>
    <string name="options">Settings</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="click">Click sound</string>
    <string name="music">Enable music</string>
    <string name="hlpopt">More options available in game (Menu - Settings).</string>
    <string name="by">Instead Launcher for Android by</string>
    <string name="menu">Menu</string>
    <string name="email">silentlexx@gmail.com</string>
    <string name="serverr">Connection error.</string>
    <string name="nodata">Data-files not found!</string>
    <string name="listupd">Creating game list...</string>
    <string name="yesno">Remove game?</string>
    <string name="yes">Yes!</string>
    <string name="no">No</string>
    <string name="alang">All language</string>
    <string name="blang">Your language</string>
    <string name="lang">Language</string>
    <string name="ag_title">Title</string>
    <string name="ag_name">Dir name</string>
    <string name="agame">About Game</string>
    <string name="ag_url">Site</string>
    <string name="ag_lang">Language</string>
    <string name="ag_file">Zip url</string>
    <string name="ag_ver">Version</string>
    <string name="ag_installed">Installed</string>
    <string name="ag_new">Not installed</string>
    <string name="ag_update">Need update</string>
    <string name="ag_status">Status</string>
    <string name="dwncancel">Downloading canceled!</string>
    <string name="langru">Russian</string>
    <string name="langen">English</string>
    <string name="zipsize">Size</string>
    <string name="mb">MB</string>
    <string name="dwnsize">Size of download</string>
    <string name="sizeyesno">Do you want continue downloading?</string>
    <string name="waitdwn">Please wait, downloading</string>
    <string name="na">Not avaible</string>
    <string name="downfile">Downloading file to </string>
    <string name="about_instead">Written by Peter Kosyh \'2009-2011\n\nPorted to Android by Aleksey Mahno \'2010-2011\n\nHomepage:\nhttp://instead.googlecode.com</string>
    <string name="ok">Ok</string>
    <string name="about_btn">About Instead</string>
    <string name="instdata">Installing</string>
    <string name="conferror">Screen resolution is wrong! Try reconfigure again!</string>
    <string name="ourtheme">Сustom game themes</string>
    <string name="flage">Lage</string>
    <string name="fnormal">Normal</string>
    <string name="fsmall">Small</string>
    <string name="fvlage">Very lage</string>
    <string name="fontsize">Font size</string>
    <string name="menunewstart">Start new game</string>
    <string name="vsmall">Very small</string>
    <string name="delsaves">Delete save game?</string>
    <string name="mailme">Send me email</string>
    <string name="ver">Version</string>
    <string name="tutorial">Tutorial</string>
    <string name="gmwhat">Install and launch games</string>
    <string name="optwhat">Screen, sound and font</string>
    <string name="marketon">Rate, write a comment</string>
    <string name="market">Instead on the Market</string>
    <string name="nourq">URQ module is not installed!</string>
    <string name="deleting">Removing ...</string>
    <string name="resetsd">This operation will reset the game, reinstall the game files on the SD card, but will not affect your game and save. Continue anyway?</string>
    <string name="atention">Attention!</string>
    <string name="scroff">Keep the screen turned</string>
    <string name="start">Start game</string>
    <string name="theme">Theme: </string>
    <string name="portrait">Portrait screen orientation</string>
    <string name="dirlist">All games</string>
    <string name="gamein">Games in</string>
    <string name="cpidf">Copy the game file to a folder Instead?</string>
    <string name="copy">Copying...</string>
    <string name="rmidf">Remove game in IDF</string>
    <string name="runidf">Run game in IDf</string>
    <string name="noidf">IDF games not found!</string>
    <string name="folderop">Games available for launch</string>
    <string name="instzipwarn">If you are not sure that the zip file contains the game Instead - click "NO"!</string>
    <string name="instzip">Install game from zip?</string>
    <string name="cpidfwarn">This will provide an opportunity to run the game directly with Instead.</string>
    <string name="launch">Launch</string>
    <string name="sand">Copy</string>
    <string name="add_widget">Instead Game</string>
    <string name="chgame">Choose the game</string>
    <string name="need_rangers">To install the game you want to install "Space Rangers"!</string>
    <string name="rangers_inst">Game is installed. To run the "Space Rangers" and start a new game.</string>
    <string name="addtodesc">Create shortcut on desktop</string>
    <string name="favorits">Favorite games</string>
    <string name="delfromfav">Remove from favorites</string>
    <string name="addtofav">Add to your favorites</string>
    <string name="lastgame">Last game played</string>
    <string name="favfolder">List of favorite games</string>
    <string name="refresh">Refresh</string>
    <string name="deletedfav"> removed from favorites.</string>
    <string name="addedfav"> added  to favorites.</string>
    <string name="game">Game </string>
    <string name="clearfav">Clear all favorites</string>
    <string name="virtkey">Virtual keyboard</string>
    <string name="virtkey_t">For display keyboard in games click anywhere on the screen, hold more than 1 second and release</string>
    <string name="in_text">Enter text:</string>
    <string name="clear">Clear</string>
    <string name="enter">Enter</string>
    <string name="close">Close</string>
</resources>
