<LinearLayout android:id="@+id/Linear01"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:background="@drawable/wallpaper">

			<LinearLayout android:id="@+id/Linear09"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:orientation="horizontal" android:layout_gravity="center"
				android:background="@drawable/header">

				<ImageView android:src="@drawable/options"
					android:adjustViewBounds="true" android:id="@+id/logo"
					android:layout_height="40dip" android:scaleType="fitCenter"
					android:layout_width="wrap_content" android:layout_marginBottom="1dip"
					android:layout_marginTop="1dip"></ImageView>


				<TextView android:id="@+id/tv" android:layout_width="wrap_content"
					android:text="@string/options" android:textSize="24sp"
					android:gravity="center" android:layout_height="fill_parent"
					android:layout_marginLeft="5dip" android:shadowDx="1"
					android:shadowDy="1" android:shadowRadius="2" android:shadowColor="#000000" android:textColor="#FFFFFF"></TextView>
			</LinearLayout>

	<ScrollView android:id="@+id/ScrollView01"
		android:layout_width="fill_parent" android:layout_height="fill_parent">
		<LinearLayout android:id="@+id/llb" android:orientation="vertical" android:gravity="center" android:layout_height="fill_parent" android:layout_width="fill_parent">



			<TableLayout android:id="@+id/Linear03"
				android:layout_width="fill_parent" android:orientation="horizontal" android:layout_height="fill_parent">

				<TableRow android:gravity="center">
				
					<CheckBox android:text="@string/music" android:id="@+id/music"
						android:textSize="20sp" android:layout_height="65dip" android:layout_width="wrap_content"></CheckBox>
				</TableRow>
				<TableRow android:gravity="center">
					<CheckBox android:text="@string/click" android:id="@+id/click"
						android:textSize="20sp" android:layout_height="65dip" android:layout_width="wrap_content"></CheckBox>


				</TableRow>
				<TableRow android:gravity="center">
					<CheckBox android:text="@string/ourtheme" android:id="@+id/ourtheme"
						android:textSize="20sp" android:layout_height="65dip" android:layout_width="wrap_content"></CheckBox>
				</TableRow>

				<TableRow android:gravity="center">
					<CheckBox android:text="@string/scroff" android:id="@+id/scroff"
						android:textSize="20sp" android:layout_height="65dip" android:layout_width="wrap_content"></CheckBox>
				</TableRow>

				<TableRow android:gravity="center">
					<CheckBox android:text="@string/portrait" android:id="@+id/portrait"
						android:textSize="20sp" android:layout_height="65dip" android:layout_width="wrap_content"></CheckBox>
				</TableRow>
				    

				<TableRow android:gravity="center" android:layout_marginTop="10dip">
					<Button android:text="@string/fontsize"
						android:layout_width="wrap_content" android:id="@+id/sfont" android:textSize="20sp" android:layout_height="wrap_content"></Button>


				</TableRow>


				<TableRow android:layout_margin="5dip"
					android:layout_height="wrap_content" android:gravity="center">
					<TextView android:id="@+id/hlpopt" android:text="@string/hlpopt"
						android:textSize="15sp" android:textColor="#CCCCCC"
						android:layout_height="wrap_content" android:layout_width="wrap_content" android:gravity="center"></TextView>
				</TableRow>

				<TableRow android:gravity="center" android:layout_marginTop="10dip">
					<Button android:text="@string/redwn"
						android:layout_width="wrap_content" android:id="@+id/reset" android:textSize="16sp"></Button>


				</TableRow>


			</TableLayout>



		</LinearLayout>



	</ScrollView>

</LinearLayout>