<LinearLayout android:id="@+id/Linear01"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:background="@drawable/wallpaper">


	<ScrollView android:id="@+id/ScrollView01"
		android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="20dip" android:layout_gravity="center_vertical">
		<LinearLayout android:id="@+id/llb" android:layout_width="fill_parent"
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="vertical" android:layout_height="fill_parent">

			<LinearLayout android:id="@+id/Linear09"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:orientation="horizontal" android:layout_gravity="center"
				android:background="#CCCCCC" android:layout_marginBottom="15dip">

				<ImageView android:src="@drawable/icon"
					android:adjustViewBounds="true" android:id="@+id/logo"
					android:layout_height="40dip" android:scaleType="fitCenter"
					android:layout_width="wrap_content" android:layout_marginBottom="1dip"
					android:layout_marginTop="1dip"></ImageView>


				<TextView android:id="@+id/tv" android:layout_width="wrap_content"
					android:textSize="24sp" android:gravity="center"
					android:textColor="#000000" android:shadowColor="#FFFFFF"
					android:layout_height="fill_parent" android:layout_marginLeft="5dip"
					android:shadowDx="1" android:shadowDy="1" android:shadowRadius="2" android:text="@string/menu"></TextView>
			</LinearLayout>


			<TableLayout android:id="@+id/Linear03"
				android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="horizontal">

				<TableRow android:layout_margin="5dip" android:gravity="center" android:layout_height="fill_parent" android:layout_width="match_parent" android:layout_gravity="center">
					<Button android:text="@string/run" android:visibility="visible"
						android:id="@+id/btn_run" android:textSize="20sp" android:gravity="center" android:drawableTop="@drawable/start_b" android:shadowDx="1" android:shadowDy="1" android:shadowRadius="1" android:shadowColor="#555555" android:textColor="#FFFFFF" android:background="@drawable/main_btn" android:layout_height="120dip" android:layout_width="110dip"></Button>


					<Button android:text="@string/gmlist" android:visibility="visible"
						android:id="@+id/btn_gmlist" android:textSize="20sp"
						android:gravity="center" android:drawableTop="@drawable/gamelist_b" android:shadowDx="1" android:shadowRadius="1" android:shadowDy="1" android:shadowColor="#555555" android:textColor="#FFFFFF" android:background="@drawable/main_btn" android:layout_height="120dip" android:layout_width="110dip"></Button>



					<Button android:text="@string/options" android:visibility="visible"
						android:id="@+id/btn_options" android:textSize="20sp" android:gravity="center" android:drawableTop="@drawable/options_b" android:shadowRadius="1" android:shadowDy="1" android:shadowDx="1" android:shadowColor="#555555" android:textColor="#FFFFFF" android:background="@drawable/main_btn" android:layout_height="120dip" android:layout_width="110dip"></Button>

					<Button android:text="@string/exit" android:id="@+id/btn_exit"
						android:visibility="visible" android:textSize="20sp" android:gravity="center" android:drawableTop="@drawable/stop_b" android:shadowDx="1" android:shadowDy="1" android:shadowRadius="1" android:shadowColor="#555555" android:textColor="#FFFFFF" android:background="@drawable/main_btn" android:layout_height="120dip" android:layout_width="110dip"></Button>



				</TableRow>
			</TableLayout>

		</LinearLayout>


</ScrollView>
	<LinearLayout android:layout_height="wrap_content" android:layout_marginTop="-20dip" android:layout_width="fill_parent" android:gravity="center" android:id="@+id/LinearLayout06">
	<TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:textSize="12sp" android:layout_height="fill_parent" android:gravity="center" android:text="@string/by" android:layout_marginRight="4dip"></TextView>
	<TextView android:id="@+id/email" android:layout_width="wrap_content" android:textSize="12sp" android:layout_height="fill_parent" android:gravity="center" android:text="@string/email" android:textColor="#3377bb"></TextView>

	</LinearLayout>

</LinearLayout>