	<LinearLayout android:id="@+id/Linear10"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="vertical" 	android:background="#CCCCCC"
			xmlns:android="http://schemas.android.com/apk/res/android">

	<RelativeLayout android:id="@+id/Linear11"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:background="#CCCCCC">


		<ImageView android:adjustViewBounds="true" android:id="@+id/logo"
			android:layout_height="40dip" android:scaleType="fitCenter"
			android:layout_width="wrap_content" android:layout_marginBottom="1dip" android:layout_marginTop="1dip" android:src="@drawable/gamelist" android:layout_alignParentLeft="true" android:layout_alignParentTop="true"></ImageView>


		<TextView android:id="@+id/tv" android:layout_width="wrap_content"
			android:textSize="24sp" android:gravity="center"
			android:textColor="#000000" android:shadowColor="#FFFFFF"
			android:layout_marginLeft="5dip"
			android:shadowDx="1" android:shadowDy="1" android:shadowRadius="2" android:text="@string/gmlist" android:layout_toRightOf="@+id/logo" android:layout_height="wrap_content" android:layout_centerVertical="true"></TextView>
		<Button android:id="@+id/btn_sync" android:layout_alignParentRight="true" android:layout_height="32dip" android:layout_width="32dip" android:layout_centerVertical="true" android:background="@drawable/refresh_small"></Button>

</RelativeLayout>

	<LinearLayout android:id="@+id/Linear12"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="horizontal" 	android:background="#000000"
			xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="center">
<Button android:text="@string/basic" android:id="@+id/basic_btn" android:layout_width="160dip" android:layout_height="50dip" android:background="@drawable/tab_c"></Button>
<Button android:text="@string/alter" android:id="@+id/alter_btn" android:layout_width="160dip" android:layout_height="50dip" android:background="@drawable/tab"></Button>	
	
	
	</LinearLayout>
	
	</LinearLayout>