<?xml version="1.0" encoding="utf-8"?>
<TableLayout android:layout_width="fill_parent"
	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
	<TableRow android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_gravity="center_horizontal">

		<LinearLayout android:id="@+id/Linear10"
			android:layout_height="wrap_content" android:orientation="vertical"
			android:layout_width="wrap_content">

			<RelativeLayout android:id="@+id/Linear11"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:background="@drawable/header">


				<ImageView android:adjustViewBounds="true" android:id="@+id/logo"
					android:layout_height="40dip" android:scaleType="fitCenter"
					android:layout_width="wrap_content" android:layout_marginBottom="1dip"
					android:layout_marginTop="1dip" android:src="@drawable/gamelist"
					android:layout_alignParentLeft="true"
					android:layout_alignParentTop="true"></ImageView>


				<TextView android:id="@+id/tv" android:layout_width="wrap_content"
					android:textSize="24sp" android:gravity="center"
					android:layout_marginLeft="5dip" android:shadowDx="1"
					android:shadowDy="1" android:shadowRadius="2" android:text="@string/gmlist"
					android:layout_toRightOf="@+id/logo" android:layout_height="wrap_content"
					android:layout_centerVertical="true" android:textColor="#FFFFFF"
					android:shadowColor="#000000"></TextView>
				<Button android:id="@+id/btn_sync"
					android:layout_alignParentRight="true" android:layout_height="32dip"
					android:layout_width="32dip" android:layout_centerVertical="true"
					android:background="@drawable/refresh_small"></Button>

			</RelativeLayout>

			<LinearLayout android:id="@+id/Linear12"
				android:layout_height="wrap_content" android:orientation="horizontal"
				android:gravity="center" android:layout_width="fill_parent">

				<Button android:text="@string/basic" android:id="@+id/basic_btn"
					android:layout_height="50dip" android:background="@drawable/tab_c"
					android:layout_weight="1" 
					android:layout_width="0dip" android:textSize="17sp"
					android:shadowDx="1" android:shadowDy="1" android:shadowRadius="1"
					android:shadowColor="#444444"></Button>
				<Button android:text="@string/alter" android:id="@+id/alter_btn"
					android:layout_height="50dip" android:background="@drawable/tab"
					android:layout_weight="1"
					android:layout_width="0dip" android:shadowColor="#444444"
					android:shadowDx="1" android:shadowDy="1" android:shadowRadius="1"
					android:textSize="17sp"></Button>


			</LinearLayout>

		</LinearLayout>

	</TableRow>
	<TableRow android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_gravity="center_horizontal"
		android:layout_weight="1">
		<LinearLayout android:layout_height="fill_parent"
			android:orientation="vertical" android:layout_width="wrap_content">
			<ListView android:id="@android:id/list" android:scrollbars="vertical"
				android:scrollbarAlwaysDrawVerticalTrack="true"
				android:layout_width="fill_parent" android:layout_height="fill_parent"
				android:smoothScrollbar="true" />
		</LinearLayout>
	</TableRow>
</TableLayout>